Bug 1882716 - [loongarch] Keep unsigned 32-bit parameter sign-extended in register. r=nika DONTBUILD

On loongarch64, 32-bit value in 64-bit register should be sign-extended, even
when it's type is unsigned.

Differential Revision: https://phabricator.services.mozilla.com/D204011